--- a/src/App.css
+++ b/src/App.css
@@ -54,8 +54,6 @@ form input {
   margin-bottom: 30px;
 }
 
-
-
 .Header{
   display: flex;
   line-height: 80px;
@@ -230,15 +228,20 @@ form input {
 .singlePage {
   padding: 50px 0;
   background: #fff;
+  margin-top: 1px;
 }
 
 .singlePage .right {
   margin-top: 30px;
 }
+.singlePage .left {
+  width: 100%;
+  text-align: center;
+}
 
 .singlePage img {
-  width: 100%;
-  height: 100%;
+  width:100%;
+  height:100%;
   border-radius: 10px;
   margin-bottom: 30px;
 }
@@ -284,36 +287,71 @@ form input {
 }
 
 
-.login_page {
+.About h2{
+  text-align: center;
+  padding: 30px 0;
+  font-size: 50px;
+  font-weight: 700;
+  border-bottom: 1px solid #676767;
+  margin-bottom: 40px;
+}
+.About .container{
+  display: flex;
+  gap: 40px;
+  margin-bottom: 40px;
+}
+
+.About .container .left{
+  flex: 1.5;
+}
+
+.About .container .right{
+  flex: 2;
+}
+
+.About .container .left img{
+  margin-bottom: 20px;
+}
+
+.About .container .left .info p{
+  margin-bottom: 15px;
+}
+.About .container .left .info .icon{
+  margin-right: 10px;
+  vertical-align: bottom;
+}
+.About .container .right p{
+  line-height: 1.2;
+  letter-spacing: 1px;
+  font-size: 15px;
+}
+
+.login_page,
+.Contact {
   position: relative;
-  margin-bottom: 70px;
+  margin-bottom: 80px;
 }
 
-.login_page form button{
-  background: #212121;
-  color: #ffffff;
-  padding: 15px 30px;
-  border-radius: 8px;
+.Contact{
+  margin-top: 1px;
 }
 
-.login_page form button:hover {
-  background: #fafafa;
-  color: #363636;
-}
-
-.login_page .backImg {
+.login_page .backImg,
+.Contact .backImg {
   width: 100%;
-  height: 50vh;
+  height: 40vh;
   position: relative;
 }
 
-.login_page .backImg img {
+.login_page .backImg img,
+.Contact .backImg img {
   width: 100%;
-  height: 50vh;
+  height: 40vh;
   object-fit: cover;
 }
 
-.login_page .text {
+.login_page .text,
+.Contact .text {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -323,22 +361,76 @@ form input {
   color: #fff;
 }
 
-.login_page .text h3 {
-  font-weight: 600;
-  margin-bottom: 10px;
+.login_page .text h3,
+.Contact .text h3 {
+  font-weight: 500;
+  margin-bottom: 20px;
+  font-size: 70px;
 }
 
-.login_page .text h2 {
-  font-size: 40px;
+.Contact .text h3{
+  color: #212121;
+}
+.Contact .text p {
+  color: #212121;
+  font-size: 20px;
 }
 
+.Contact label {
+  margin-bottom: 20px;
+}
 
+.login_page form .id,
+.Contact form .id{
+  margin-bottom: 20px;
+}
 
+.login_page form .password,
+.Contact form .password{
+  margin-bottom:60px;
+}
 
+.login_page form button,
+.Contact form button{
+  background: #212121;
+  color: #ffffff;
+  padding: 13px 30px;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+}
 
+.login_page form button:hover {
+  background: #676767;
+  color: #f7f7f7;
+  border: 1px solid #676767;
 
+}
 
+.Contact .text h3 {
+  color: #212121;
+}
 
+.Contact .text p {
+  color: #212121;
+}
+
+.Contact input[type=submit]{
+  background: #212121;
+  color: #ffffff;
+  padding: 13px 30px;
+  border-radius: 8px;
+  margin-bottom: 0;
+}
+
+.Contact input[type=submit]:hover{
+  background: #676767;
+  color: #f7f7f7;
+  border: 1px solid #676767;
+}
+
+.Contact form input {
+  margin-bottom: 20px;
+}
 
 footer {
   padding: 10px;
