--- a/src/App.css
+++ b/src/App.css
@@ -231,60 +231,25 @@ form input {
   margin-top: 1px;
 }
 
-.singlePage .right {
-  margin-top: 30px;
-}
-.singlePage .left {
-  width: 100%;
-  text-align: center;
-}
-
-.singlePage img {
+.singlePage .top img {
   width:100%;
   height:100%;
   border-radius: 10px;
   margin-bottom: 30px;
 }
 
-.singlePage h2 {
+.singlePage .bottom h2 {
   font-size: 30px;
   font-weight: 500;
 }
 
-.singlePage p {
+.singlePage .bottom p {
   margin: 20px 0;
   font-size: 18px;
   line-height: 2;
   text-transform: capitalize;
 }
 
-.singlePage .buttons {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.singlePage .button {
-  margin-left: 20px;
-  border: none;
-  border-radius: 8px;
-  color: #fff;
-  cursor: pointer;
-  font-size: 18px;
-  font-weight: 400;
-  height: 48px;
-  line-height: 1;
-  padding: 10px 25px;
-}
-
-.singlePage .button:nth-child(1) {
-  background: #10ac84;
-  font-size: 18px;
-}
-
-.singlePage .button:nth-child(2) {
-  background: #ee5253;
-  font-size: 22px;
-}
 
 
 .About h2{
@@ -412,6 +377,7 @@ form input {
 
 .Contact .text p {
   color: #212121;
+  line-height: 1.4;
 }
 
 .Contact input[type=submit]{
@@ -441,10 +407,38 @@ footer .icon {
   margin-left: 10px;
 }
 
+
+@media (max-width:1200px){
+  .login_page form,
+  .Contact form {
+      width: 70%;
+      padding: 60px 50px;
+    }
+}
 @media (max-width: 768px) {
 
   .container.grid {
     grid-template-columns: repeat(2, 1fr);
   }
 
+  .About .container {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-bottom: 40px;
+  }
+
+  .login_page form,
+  .Contact form{
+    width: 80%;
+    padding: 60px 50px;
+  }
+  .login_page .text h3,
+  .Contact .text h3 {
+    font-size: 50px;
+  }
+
+  .Contact .text p {
+    font-size: 13px;
+  }
 }
