--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body{
   background: #f9f9f9; 
 }
+
 .flex {
   display: flex;
   justify-content: space-between;
@@ -12,6 +13,7 @@ body{
   width: 100%;
   margin: auto;
 }
+
 form,
 .boxItems {
   border: 1px solid #e6e6e6;
@@ -165,11 +167,7 @@ form input {
   grid-gap: 15px;
 }
 .Works .boxItems {
-  transition: 0.5s;/* 
-  border: 1px solid #e6e6e6;
-  border-radius: 12px;
-  padding: 20px;
-  background: #fff; */
+  transition: 0.5s;
 }
 
 .Works .boxItems:hover {
@@ -208,7 +206,7 @@ form input {
   font-size: 17px;
 }
 .Works h3 {
-  font-weight: 570;
+  font-weight: 700;
 }
 
 .Works .details p {
@@ -217,6 +215,7 @@ form input {
   margin: 20px 0;
   font-size: 17px;
   line-height: 25px;
+  word-wrap: break-word;
 }
 
 .Works .date {
@@ -248,6 +247,7 @@ form input {
   font-size: 18px;
   line-height: 2;
   text-transform: capitalize;
+  word-wrap: break-word;
 }
 
 
@@ -256,8 +256,8 @@ form input {
   text-align: center;
   padding: 30px 0;
   font-size: 50px;
-  font-weight: 700;
-  border-bottom: 1px solid #676767;
+  font-weight: 500;
+  border-bottom: 1px solid #bcbcbc;
   margin-bottom: 40px;
 }
 .About .container{
@@ -411,14 +411,32 @@ footer .icon {
 @media (max-width:1200px){
   .login_page form,
   .Contact form {
-      width: 70%;
-      padding: 60px 50px;
-    }
+    width: 70%;
+    padding: 60px 50px;
+  }
+
+  .MainVisual .slideArrows button:first-child {
+    margin: 0 0 0 -47%;
+  }
+
+  .MainVisual .slideArrows button:last-child {
+    margin: 0 0 0 47%;
+  }
 }
 @media (max-width: 768px) {
 
   .container.grid {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .MainVisual .tit {
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 5px;
+  }
+
+  .MainVisual .more {
+    font-size: 13px;
   }
 
   .About .container {
@@ -440,5 +458,172 @@ footer .icon {
 
   .Contact .text p {
     font-size: 13px;
+  }
+}
+
+@media (max-width:576px) {
+
+  .About h2,
+  .login_page .text h3,
+  .Contact .text h3 { 
+    font-size: 35px;
+  }
+  .Contact .text p {
+    font-size: 12px;
+  }
+  .MainVisual .tit {
+    font-size: 13px;
+    font-weight: 500;
+    margin-bottom: 5px;
+  }
+
+  .MainVisual .more {
+    font-size: 11px;
+  }
+
+  .Header {
+    line-height: 70px;
+    font-size: 11px;
+  }
+
+  .nav {
+    justify-content: center;
+    gap: 10px;
+  }
+
+  .logo {
+    margin-left: 3%;
+    font-size: 13px;
+  }
+
+  .login {
+    margin-right: 3%;
+    gap: 5px;
+  }
+
+  .login img {
+    width: 25px;
+    height: 25px;
+  }
+
+  .singlePage {
+    padding: 30px 0;
+  }
+
+  .singlePage .top img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    margin-bottom: 30px;
+  }
+
+  .singlePage .bottom h2 {
+    font-size: 25px;
+    font-weight: 500;
+    margin-bottom: 20px;
+  }
+
+  .singlePage .bottom p {
+    margin-bottom: 20px;
+    font-size: 15px;
+  }
+
+  .Works{
+    text-align: center;
+  }
+
+  .Works img {
+    height: 200px;
+  }
+
+  .Works .icon {
+    font-size: 13px;
+  }
+
+  .Works .tag {
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+
+  .Works .tag .icon {
+    font-size: 15px;
+  }
+
+  .Works .tag span {
+    font-size: 15px;
+  }
+
+  .Works .details p {
+    height: 150px;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 1.5;
+  }
+
+  .Works .date {
+    font-size: 11px;
+  }   
+
+
+.login_page,
+.Contact {
+  margin-bottom: 70px;
+}
+
+.login_page .backImg,
+.Contact .backImg {
+  height: 30vh;
+}
+
+.login_page .backImg img,
+.Contact .backImg img {
+  height: 30vh;
+}
+
+.Contact label {
+  margin-bottom: 15px;
+}
+
+
+.Contact form input {
+  margin-bottom: 20px;
+}
+
+footer {
+  padding: 10px;
+  font-size: 13px;
+}
+
+footer .icon {
+  font-size: 15px;
+  margin-left: 5px;
+}
+}
+@media (max-width:470px) {
+  .Works .details p {
+    height: 200px;
+  }
+
+  .login_page form,
+  .Contact form {
+    padding: 35px;
+    font-size: 13px;
+    margin-top: 50px;
+  }
+
+  .login_page,
+  .Contact {
+    margin-bottom: 50px;
+  }
+
+  .Contact form textarea {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width:390px) {
+  .Works .details p {
+    height: 220px;
   }
 }
